# Dev_KModTest

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  MyGlobalImports.cmake  MyPostBuild.cmake  README.md  rpi-toolchain.cmake
CommonLib/: CMakeLists.txt  cmnGPIO.cpp  cmnGPIO.h  cmnGPIO_linux.cpp  cmnPeriodicParms.cpp  cmnPeriodicParms.h  cmnPriorities_linux.cpp  cmnStrobeParms.cpp  cmnStrobeParms.h  someStrobeParms.cpp  someStrobeParms.h
ExampleThread1/: CMakeLists.txt  CmdLineExec.cpp  MainInit.cpp  someExampleTimerThread.cpp  someExampleTimerThread.h
GPIO/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  stdafx.h
Test/: CMakeLists.txt
gpiotest/: CMakeLists.txt  CmdLineExec.cpp  Main.cpp  MainInit.cpp  someMonitorThread.cpp  someStrobeThread.cpp
strobe/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  someMonitorThread.cpp  someMonitorThread.h  someMyDev.cpp  someMyDev.h  someStrobeThread.cpp  someStrobeThread.h
zzzMacros/: MyGlobalImports.cmake
